fixed spacing and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,14 @@ body {
     color: #FFFFFF;
     font-family: 'Poppins', sans-serif !important;
     margin: 0;
-    padding: 0;
+    padding: 5rem;
     overflow-x: hidden;
     box-sizing: border-box;
     position: relative;
     background-image: url(../img/bg.png);
     background-size: cover;
-    background-position: center bottom;
+    background-position: center center;
+    background-repeat: no-repeat;
     position: relative;
 }
 /* ==================== End Of CSS RESET ==================== */
@@ -44,7 +45,6 @@ body {
 
 .g-section {
     position: relative;
-    padding-top: 110px;
 }
 
 
@@ -53,7 +53,7 @@ body {
     font-size: 3rem;
     font-weight: 800;
     color: #FFFFFF;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
 }
@@ -64,7 +64,7 @@ body {
     font-size: 1.2rem;
     font-weight: 400;
     color: #FFFFFF;
-    text-align: justify;
+    text-align: center;
     letter-spacing: 0.2rem;
     margin-top: 1.5rem;
     margin-bottom: 0;
